<resources>
    <string name="app_name">鑫榴果园</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="register_title">手机号注册</string>
    <string name="login_title">手机号登录</string>
    <string name="register_input_phone_hint">手机号注册</string>
    <string name="login_input_phone_hint">请输入手机号</string>
    <string name="register_input_code_hint">验证码</string>
    <string name="register_input_pass_hint">请设置密码</string>
    <string name="login_input_pass_hint">请输入密码</string>
    <string name="get_code">获取验证码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="search">搜索商品</string>
    <string name="favorite">猜你喜欢</string>
    <string name="btn_register">注册账号</string>
    <string name="btn_forget_pass">忘记密码</string>
    <string name="go_to_order">查看订单</string>
    <string name="changxiao">畅销</string>
    <string name="xiangou">限购</string>
    <string name="show_all_order">查看全部订单</string>
    <string name="my_order">我的订单</string>
    <string name="show_more">查看更多</string>
    <string name="buy_in_time">限时秒杀</string>
    <string name="go_to_index">返回首页</string>
    <string name="pay_success">支付成功</string>
    <string name="detail_address_hint">街道、楼牌号</string>
    <string name="name">姓    名:</string>
    <string name="link_num">联系电话:</string>
    <string name="address">所在地区:</string>
    <string name="detail_address">详细地址:</string>
    <string name="default_address">设为默认:</string>
    <string name="address_cancel">取消</string>
    <string name="confrim">确定</string>
    <string name="good_product">质优好货  抢鲜一下</string>
    <string name="guess_like">猜你喜欢</string>
    <string name="zhuanshutequan">专属特权</string>
    <string name="for_you_pick">为你优选</string>
    <string name="huobao">火爆推荐</string>
    <string name="xinpin">新品抢先看</string>
    <string name="rexiao">热销专区</string>
    <string name="goumai">购买更多实惠</string>
    <string name="thanksbuy">感谢您的购买，我们会尽快为您处理。</string>
    <string name="bgiang">必抢</string>
    <string name="empty">暂无数据</string>
    <string name="daifukuan">待付款</string>
    <string name="daitihuo">待提货</string>
    <string name="daifahuo">待发货</string>
    <string name="comment">评价</string>
    <string name="add_address">添加新地址</string>
    <string name="head_applay">申请成为团长</string>
    <string name="tel_num">13987658765</string>
    <string name="head_applay_detail">需要您填写真实姓名并验证手机号码</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment_hint"> 宝贝满足您的期待吗？说说它的优点和美中不足吧..</string>
    <string name="ceshi"></string>
    <string name="long_ceshi">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="user_agresstr">鑫榴果园尊重并保护所有使用服务用户的个人隐私权。为了给您提供更准确、更有个性化的 服务，鑫榴果园会按照本隐私权政策的规定使用和披露您的个人信息。但鑫榴果园将以 度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下 ，鑫榴果园不会将这些信息对外披露或向第三方提供。鑫榴果园会不时更新本隐私权政策 。 您在同意鑫榴果园服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私 权政策属于鑫榴果园服务使用协议不可分割的一部分。 
  1. 适用范围 
\na) 在您注册鑫榴果园帐号时，您根据鑫榴果园要求提供的个人注册信息； 
\nb) 在您使用鑫榴果园网络服务，或访问鑫榴果园平台时，鑫榴果园自动接收并记 录的您的浏览器和计算机上的信息，包括但不限于您的IP地址、浏览器的类型、使用的语言、访 问日期和时间、软硬件特征信息及您需求的网页记录等数据； 
\nc) 鑫榴果园通过合法途径从商业伙伴处取得的用户个人数据。 
您了解并同意，以下信息不适用本隐私权政策： 
 \na) 您在使用鑫榴果园平台提供的搜索服务时输入的关键字信息； 
\nb) 鑫榴果园收集到的您在鑫榴果园发布的有关信息数据，包括但不限于参与活动、成交 信息及评价详情； 
 \nc) 违反法律规定或违反鑫榴果园规则行为及鑫榴果园已对您采取的措施。 
2. 信息使用 
 \na) 鑫榴果园不会向任何无关第三方提供、出售、出租、分享或交易您的个人信息，除非事先 得到您的许可，或该第三方和鑫榴果园（含鑫榴果园关联公司）单独或共同为您提供服务 ，且在该服务结束后，其将被禁止访问包括其以前能够访问的所有这些资料。 
\nb) 鑫榴果园亦不允许任何第三方以任何手段收集、编辑、出售或者无偿传播您的个人信息。 任何鑫榴果园平台用户如从事上述活动，一经发现，鑫榴果园有权立即终止与该用户的服 务协议。 
\nc) 为服务用户的目的，鑫榴果园可能通过使用您的个人信息，向您提供您感兴趣的信息，包 括但不限于向您发出产品和服务信息。 
3. 信息披露 在如下情况下，鑫榴果园将依据您的个人意愿或法律的规定全部或部分的披露您的个人信息 ： 
\na) 经您事先同意，向第三方披露； 
 \nb) 为提供您所要求的产品和服务，而必须和第三方分享您的个人信息； 
\nc) 根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露； 
\nd) 如您出现违反中国有关法律、法规或者鑫榴果园服务协议或相关规则的情况，需要向第三 方披露； 
 \ne) 如您是适格的知识产权投诉人并已提起投诉，应被投诉人要求，向被投诉人披露，以便双方 处理可能的权利纠纷； 
\nf) 在鑫榴果园平台上创建的某一交易中，如交易任何一方履行或部分履行了交易义务并提出 信息披露请求的，鑫榴果园有权决定向该用户提供其交易对方的联络方式等必要信息，以促 成交易的完成或纠纷的解决。 
\ng) 其它鑫榴果园根据法律、法规或者网站政策认为合适的披露。 
4. 信息安全 
\na) 鑫榴果园将通 过对用户密码进行加密等安全措施确保您的信息不丢失，不被滥用和变造。尽管有前述安全措施 ，但同时也请您注意在信息网络上不存在“完善的安全措施”。 
\nb) 在使用鑫榴果园网络服务进行网上交易时，您不可避免的要向交易对方或潜在的交易对方 披露自己的个人信息，如联络方式或者邮政地址。请您妥善保护自己的个人信息，仅在必要的情 形下向他人提供。如您发现自己的个人信息泄密，尤其是鑫榴果园用户名及密码发生泄露， 请您立即联络鑫榴果园客服，以便鑫榴果园采取相应措施。 
5.运营者基本信息
\na)公司名称：枣庄鑫榴商贸有限公司
\nb)注册地址：山东省枣庄市薛城区天衢商贸城D区7号楼117号
\nc)办公提示：山东省枣庄市薛城区天衢商贸城D区7号楼117号
\nd)信息保护负责人联系电话：0632-3229777

6.app内获取权限及用途
\na)获取用户位置信息：用于判断距离用户最近的平台团长或提货点，便于用户寻找距离自己当前距离最近的提货点
\nb)获取摄像头权限：用户团长用户扫码订单及用户的二维码，进行收货或提货操作
\nc)获取安装更新的权限：用于软件的功能更新。
\nd)常驻通知：用于app内的系统消息发送</string>


    <string name="user_aggress">您好！欢迎您使用鑫榴果园。

\n1.特别提示

\n&#160;&#160;1.1为了更好地为您提供服务，请您仔细阅读这份协议。本协议是您与本应用就您登录本应用平台进行注册及使用等所涉及的全部行为所订立的权利义务规范。您在注册过程中点击“注册”等按钮、及注册后登录和使用时，均表明您已完全同意并接受本协议，愿意遵守本协议的各项规则、规范的全部内容，若不同意则可停止注册或使用本应用平台。如您是未成年人，您还应要求您的监护人仔细阅读本协议，并取得他/他们的同意。

\n&#160;&#160;1.2为提高用户的使用感受和满意度，用户同意本应用将基于用户的操作行为对用户数据进行调查研究和分析，从而进一步优化服务。

\n2.服务内容

\n&#160;&#160;2.1鑫榴果园APP是一个水果生鲜日用百货线上销售平台，平台内严禁一切非法信息，违反社区运营规范者，一律封号处理。

\n&#160;&#160;2.2本应用服务的具体内容由本应用制作者根据实际情况提供。

 \n&#160;&#160;2.3 除非本注册及服务协议另有其它明示规定，本应用所推出的新产品、新功能、新服务，均受到本注册及注册协议规范。 本应用仅提供相关的网络服务，除此之外与相关网络服务有关的设备(如个人电脑、手机、及其他与接入互联网或移动网有关的装置)及所需的费用(如为接入互联网而支付的电话费及上网费、为使用移动网而支付的手机费)均应由用户自行负担。

\n3.使用规则

\n&#160;&#160;3.1 用户帐号注册

\n&#160;&#160;3.1使用本应用系统注册的用户，只能使用汉字、英文字母、数字、下划线及它们的组合，否则将不予注册。

\n&#160;&#160;3.2如发现用户帐号中含有不雅文字或不恰当名称的，新榴果园保留取消其用户资格的权利。

\n&#160;&#160;&#160;&#160;3.2.1请勿以党和国家领导人或其他社会名人的真实姓名、字号、艺名、笔名注册；

\n&#160;&#160;&#160;&#160;3.2.2请勿以国家机构或其他机构的名称注册；

\n&#160;&#160;&#160;&#160;3.2.3请勿注册不文明、不健康名字，或包含歧视、侮辱、猥亵类词语的帐号；

\n&#160;&#160;&#160;&#160;3.2.4请勿注册易产生歧义、引起他人误解或其它不符合法律规定的帐号。

\n&#160;&#160;3.3用户帐号的所有权归本应用，用户仅享有使用权。

\n&#160;&#160;3.4用户有义务保证密码和帐号的安全，用户利用该密码和帐号所进行的一切活动引起的任何损失或损害，由用户自行承担全部责任，本应用不承担任何责任。如用户发现帐号遭到未授权的使用或发生其他任何安全问题，应立即修改帐号密码并妥善保管，如有必要，请反馈通知本应用管理人员。因黑客行为或用户的保管疏忽导致帐号非法使用，本应用不承担任何责任。

\n&#160;&#160;3.5 用户承诺对其发表或者上传于本应用的所有信息(即属于《中华人民共和国著作权法》规定的作品，包括但不限于文字、图片、音乐、电影、表演和录音录像制品和电脑程序等)均享有完整的知识产权，或者已经得到相关权利人的合法授权；如用户违反本条规定造成本应用被第三人索赔的，用户应全额补偿本应用的一切费用(包括但不限于各种赔偿费、诉讼代理费及为此支出的其它合理费用)；

\n&#160;&#160;3.6当第三方认为用户发表或者上传于本应用的信息侵犯其权利，并根据《信息网络传播权保护条例》或者相关法律规定向本应用发送权利通知书时，用户同意本应用可以自行判断决定删除涉嫌侵权信息，除非用户提交书面证据材料排除侵权的可能性，本应用将不会自动恢复上述删除的信息；

\n(1)不得为任何非法目的而使用网络服务系统；

\n(2)遵守所有与网络服务有关的网络协议、规定和程序；

\n(3)不得利用本应用的服务进行任何可能对互联网的正常运转造成不利影响的行为；

\n(4)不得利用本应用服务进行任何不利于本应用的行为。

\n&#160;&#160;3.7如用户在使用网络服务时违反上述任何规定，本应用有权要求用户改正或直接采取一切必要的措施(包括但不限于删除用户上传的内容、暂停或终止用户使用网络服务的权利)以减轻用户不当行为而造成的影响。

4.责任声明

\n&#160;&#160;4.1 任何网站、单位或者个人如认为本应用或者本应用提供的相关内容涉嫌侵犯其合法权益，应及时向本应用提供书面权力通知，并提供身份证明、权属证明及详细侵权情况证明。本应用在收到上述法律文件后，将会尽快切断相关内容以保证相关网站、单位或者个人的合法权益得到保障。

\n&#160;&#160;4.2用户明确同意其使用本应用网络服务所存在的风险及一切后果将完全由用户本人承担，本应用对此不承担任何责任。

\n&#160;&#160;4.3本应用无法保证网络服务一定能满足用户的要求，也不保证网络服务的及时性、安全性、准确性。

\n&#160;&#160;4.4本应用不保证为方便用户而设置的外部链接的准确性和完整性，同时，对于该等外部链接指向的不由本应用实际控制的任何网页上的内容，本应用不承担任何责任。

5.知识产权

\n&#160;&#160;5.1 本应用特有的标识、版面设计、编排方式等版权均属本应用享有，未经本应用许可授权，不得任意复制或转载。

\n&#160;&#160;5.2 用户从本应用的服务中获得的信息，未经本应用的许可，不得任意复制或转载。


\n&#160;&#160;5.3 本应用所有用户上传内容仅代表用户自己的立场和观点，与本应用无关，由作者本人承担一切法律责任。

\n&#160;&#160;5.5上述及其他任何本服务包含的内容的知识产权均受到法律保护，未经本应用、用户或相关权利人书面许可，任何人不得以任何形式进行使用或创造相关衍生作品。

6.隐私保护

\n&#160;&#160;6.1 本应用不对外公开或向第三方提供单个用户的注册资料及用户在使用网络服务时存储在本社区的非公开内容，但下列情况除外：

\n(1)事先获得用户的明确授权；

\n(2)根据有关的法律法规要求；

\n(3)按照相关政府主管部门的要求；

\n(4)为维护社会公众的利益。

\n&#160;&#160;6.2 本应用可能会与第三方合作向用户提供相关的网络服务，在此情况下，如该第三方同意承担与本社区同等的保护用户隐私的责任，则本社区有权将用户的注册资料等信息提供给该第三方，并无须另行告知用户。

\n&#160;&#160;6.3 在不透露单个用户隐私资料的前提下，本应用有权对整个用户数据库进行分析并对用户数据库进行商业上的利用。

7.协议修改

\n&#160;&#160;7.1本应用有权随时修改本协议的任何条款，一旦本协议的内容发生变动，本应用将会在本应用上公布修改之后的协议内容，若用户不同意上述修改，则可以选择停止使用本应用。本应用也可选择通过其他适当方式（比如系统通知）向用户通知修改内容。

\n&#160;&#160;7.2如果不同意本应用对本协议相关条款所做的修改，用户有权停止使用本应用。如果用户继续使用本应用，则视为用户接受本应用对本协议相关条款所做的修改。

</string>


</resources>
