<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <include layout="@layout/activity_top_title_layout"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="wrap_content"
            android:src="@mipmap/img_pay_success"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:textSize="17sp"
            android:layout_marginTop="17dp"
            android:text="@string/pay_success"
            android:textColor="@color/pay_success_color"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:textSize="12sp"
            android:text="@string/thanksbuy"
            android:gravity="center"
            android:layout_marginTop="28dp"
            android:textColor="@color/thanks_buy"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_go_to_order"
            android:layout_width="wrap_content"
            android:text="@string/go_to_order"
            android:background="@mipmap/go_to_order"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_go_to_index"
            android:layout_width="wrap_content"
            android:text="@string/go_to_index"
            android:layout_marginTop="16dp"
            android:background="@mipmap/go_to_index"
            android:textColor="@color/confirm"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
