<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="137dp"
        android:layout_height="137dp"
        android:gravity="center"
        android:background="@drawable/bg_special_item"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="@dimen/sp_15"
            android:text="@string/buy_in_time"
            android:textColor="@color/miaosha"
            android:drawableLeft="@mipmap/miaosha"
            android:drawablePadding="8dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/good_product"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="45dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_height="45dp" />
        <TextView
            android:layout_width="wrap_content"
            android:background="@mipmap/zhuanshu"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:gravity="center"
            android:text="@string/zhuanshutequan"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/sp_14"
        android:layout_weight="1"
        android:layout_height="137dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="@drawable/bg_special_item"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/rexiao"
                        android:textColor="@color/rexiao_color"
                        android:textSize="14sp"
                        android:drawableLeft="@mipmap/rexiao"
                        android:drawablePadding="8dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/goumai"
                        android:textSize="11sp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:background="@mipmap/huobao_bg"
                        android:textSize="8sp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:text="@string/huobao"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="56dp"
                        android:src="@mipmap/ic_launcher"
                        android:scaleType="fitXY"
                        android:layout_height="56dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_special_item"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="56dp"
                        android:src="@mipmap/ic_launcher"
                        android:layout_height="56dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/guess_like"
                        android:textColor="@color/guess_like_color"
                        android:textSize="14sp"
                        android:drawableLeft="@mipmap/guess_liek"
                        android:drawablePadding="8dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/xinpin"
                        android:textSize="11sp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:background="@mipmap/for_you_pick"
                        android:textSize="8sp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:text="@string/for_you_pick"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
