<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/register_padding"
    android:paddingRight="@dimen/register_padding"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/tv_title"
            android:textSize="@dimen/register_title_size"
            android:textColor="@color/title_color"
            android:layout_marginTop="@dimen/dp_80"
            android:layout_marginBottom="@dimen/dp_80"
            android:text="@string/login_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/small_padding"
            android:paddingBottom="@dimen/small_padding"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_login_input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/login_input_phone_hint"
                android:textColorHint="@color/hint_color"
                android:drawableLeft="@mipmap/icon_user"
                android:drawablePadding="@dimen/icon_padding"
                android:inputType="phone"
                android:gravity="center_vertical"
                android:textSize="@dimen/sp_14"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_color"
                android:layout_marginTop="@dimen/small_padding"
                ></View>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/small_padding"
            android:paddingBottom="@dimen/small_padding"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_login_input_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/login_input_pass_hint"
                android:textColorHint="@color/hint_color"
                android:drawableLeft="@mipmap/icon_phone"
                android:drawablePadding="@dimen/icon_padding"
                android:inputType="textPassword"
                android:gravity="center_vertical"
                android:textSize="@dimen/sp_14"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_color"
                android:layout_marginTop="@dimen/small_padding"
                ></View>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingBottom="9dp"
            android:paddingTop="9dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_btn_register"
                android:layout_width="45dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="11sp"
                android:textColor="@color/get_code_color"
                android:text="@string/btn_register"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_btn_forget"
                android:layout_width="45dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textSize="11sp"
                android:text="@string/btn_forget_pass"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <Button
            android:id="@+id/btn_login_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="@dimen/dp_60"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            android:gravity="center"
            android:background="@mipmap/btn_register"/>
    </LinearLayout>
</LinearLayout>
